distributed-backend/orchestration/kubernetes/platform/gateway/prod/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: internet
spec:
  controllerName: istio.io/gateway-controller
